k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lxdex-production
  labels:
    name: lxdex-production
    environment: production
    app: lxdex
